[package]
name = "de-regex"
version = "0.1.0"
authors = ["Volker Ströbel <volkerstroebel@mysurdity.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Regular expression based deserialization for serde"
category = ["encoding"]
keywords = ["serde", "deserialization", "regex"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
regex = "1.4"